Attempt to implement sign-in m

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
         <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
           data-mdl-for="sign-in-menu">
-          <li class="mdl-menu__item">Sign-in with Google</li>
-          <li class="mdl-menu__item">Sign-in with Facebook</li>
+          <li id="sign-in-Google" class="mdl-menu__item">Sign-in with Google</li>
+          <li id="sign-in-Facebook" class="mdl-menu__item">Sign-in with Facebook</li>
         </ul>
 
         <!--<button hidden id="sign-out" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
