Attempt to implement sign-in m

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
           <li id="sign-in-Google" class="mdl-menu__item">Sign-in with Google</li>
           <li id="sign-in-Facebook" class="mdl-menu__item">Sign-in with Facebook</li>
         </ul>
-
-        <!--<button hidden id="sign-out" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
+        <button hidden id="sign-out" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
           Sign-out
         </button>
-        <button hidden id="sign-in-Google" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
+        
+        <!--<button hidden id="sign-in-Google" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
           <i class="material-icons">account_circle</i>Sign-in with Google
         <button hidden id="sign-in-Facebook" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
           <i class="material-icons">account_circle</i>Sign-in with Facebook
